--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sanket-patil-portfolio-website",
   "version": "0.1.0",
-  "homepage": "http://sanketpatil.github.io/",
+  "homepage": "http://spatil1697.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
